--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 
 @layer base {
-	main h1 {
-		@apply text-xl mb-2 font-semibold
-	}
+        body {
+                @apply text-black;
+        }
+        main h1 {
+                @apply text-xl mb-2 font-semibold
+        }
 	main h2 {
 		@apply text-lg mb-2 font-semibold
 	}
@@ -39,9 +42,9 @@
 	main .primary-button {
 		@apply py-3 px-4 inline-flex mt-6 justify-center mr-4 items-center gap-2 border-2 border-green-500 text-white bg-green-500 font-semibold hover:text-white hover:bg-green-500 hover:border-green-500 focus:outline-none focus:ring-2 focus:ring-green-200 focus:ring-offset-2 transition-all text-sm dark:focus:ring-offset-gray-800
 	}
-	main .secondary-button {
-		@apply py-3 px-4 inline-flex mt-6 justify-center mr-4 items-center gap-2 border-2 border-slate-200 font-semibold text-slate-500 hover:text-white hover:bg-slate-500 hover:border-slate-500 focus:outline-none focus:ring-2 focus:ring-slate-200 focus:ring-offset-2 transition-all text-sm dark:focus:ring-offset-slate-800
-	}
+        main .secondary-button {
+                @apply py-3 px-4 inline-flex mt-6 justify-center mr-4 items-center gap-2 border-2 border-slate-200 font-semibold text-black hover:text-white hover:bg-slate-500 hover:border-slate-500 focus:outline-none focus:ring-2 focus:ring-slate-200 focus:ring-offset-2 transition-all text-sm dark:focus:ring-offset-slate-800
+        }
 	.misc-content pre {
 		@apply font-['MonoLisa'] whitespace-pre-wrap shadow-sm break-words bg-white mb-6 py-4 px-4 text-fuchsia-600 text-xs rounded-sm border border-slate-200 dark:bg-slate-600 dark:border-slate-600 dark:text-slate-300
 	}
